make form labels slide into view, fix alignment of newsletter form fields

--- a/assets/styles/components/_forms.scss
+++ b/assets/styles/components/_forms.scss
@@ -11,11 +11,17 @@ form {
   .input-wrap {
     position: relative;
     label {
-      visibility: hidden;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translateY(35%);
+      transition: all 0.15s ease-out;
     }
     &.has-input {
       label {
-        visibility: visible;
+        transform: translateY(0);
+        opacity: 1;
       }
     }
   }
@@ -59,7 +65,7 @@ form {
     line-height: 1.2; // here to line up with selects
     width: 100%;
     color: color('black');
-    padding: 19px $padding-sm 27px 0;
+    padding: 24px $padding-sm 27px 0;
     border-bottom: 1px solid color('black');
 
     &::placeholder {
@@ -95,7 +101,7 @@ form {
     select {
       display: block;
       width: 100%;
-      padding: 19px $padding-sm 27px 0;
+      padding: 24px $padding-sm 27px 0;
       margin: 0;
       color: color('black');
       background: none;
