--- a/assets/styles/components/_newsletter-form.scss
+++ b/assets/styles/components/_newsletter-form.scss
@@ -5,6 +5,7 @@ form.newsletter {
 
   .form-row {
     justify-content: flex-end;
+    align-items: flex-end;
 
     .input-wrap {
       flex-basis: 100%;
